--- a/estilo/style.css
+++ b/estilo/style.css
@@ -9,7 +9,7 @@
     box-sizing: border-box;
 }
 h1{
-    font-size: 3.5rem;
+    font-size: 6.5rem;
     font-weight: 400;
     margin-bottom: 35px;
     cursor: default;
@@ -17,23 +17,26 @@ h1{
 body{
     background-color: #FDD447;
     font-family: norms;
+    overflow-x: hidden;
 }
 .principal-main{
     height: 80vh;;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 #painel{
    height: 67vh;
+   margin-left: 8vw;
 }
 .btn-estilo1, .btn-estilo2{
-    width: 150px;
-    height: 45px;
-    border-radius: 20px;
+    width: 180px;
+    height: 65px;
+    border-radius: 200px;
     border: none;
     font-weight: 600;
     cursor: pointer;
+    font-size: 1rem;
 }
 .btn-estilo2{
     margin-left: 12px;
@@ -42,4 +45,87 @@ body{
 .btn-estilo2:hover{
     opacity: 1;
     transition: 1s;
+}
+h2{
+    margin-bottom: 70px;
+    text-align: center;
+    font-size: 2.3rem;
+}
+.img-section{
+    margin: 12px;
+    width: 18vw;
+    height: 23vw;
+}
+span{
+    text-align: center;
+    font-size: 1.7rem;
+}
+.container{
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+}
+.btn3{
+    width: 500px;
+    height: 45px;
+    border-radius: 8px;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 1.30rem;
+}
+a{
+    color: black;
+    font-weight: 300;
+}
+.section-secundario{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    height: 25vh;
+}
+h3{
+    margin: 30px 0 55px 75px;
+    font-size: 2.3rem;
+}
+.i{
+    width: 6.5vw;
+    height: 6.5vw;
+}
+.section-terciario{
+    display: flex;
+    flex-direction: column;
+}
+.div-section-1{
+    margin-left: 25px;
+    height: 12vw;
+}
+.div-section-2{
+    margin: 0 auto;
+    height: 12vw;
+}
+.div-section-3{
+    margin-left: auto;
+    height: 12vw;
+}
+.btn4{
+    margin-bottom: 1.1rem;
+    width: 160px;
+    height: 45px;
+    border-radius: 20px;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 1.30rem;
+}
+.section-quaternario{
+    padding: 3vw;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    height: 25vh;
 }
