--- a/estilo/style.css
+++ b/estilo/style.css
@@ -14,6 +14,75 @@ h1{
     margin-bottom: 35px;
     cursor: default;
 }
+.a,.b,.c{
+    width: 25px;
+    height: 4px;
+    cursor: pointer;
+    margin:3px 3px 3px 18px;
+    border-radius: 3px;
+    background-color: black;
+}
+header{
+    display: flex;
+    width: 100vw;
+    height: 8vh;
+    padding: 25px;
+    align-items: center;
+}
+.boxpesquisa{
+    align-items: center;
+    height: 8vh;
+    display: flex;
+}
+.lupa{
+    cursor: pointer;
+    margin-left: 10px;
+    width: 30px;
+}
+.btn7{
+    background-color: inherit;
+    border: none;
+}
+.areapesquisa{
+    width: 430px;
+    border: none;
+    height: 38px;
+    outline: none;
+    border-radius: 6px;
+    padding-left: 8px;
+}
+.nav1{
+    width: 45vw;/*primeira parte da largura*/
+    display: flex;
+    height: 8vh;
+    align-items: center;
+    justify-content: space-between;
+}
+.nav2{
+    width: 55vw;/*restante da largura*/
+    display: flex;
+    height: 8vh;
+    align-items: center;
+    justify-content: flex-end;
+}
+.logo{
+    display: inline;
+    margin-top: 3px;
+    cursor: default;
+}
+.logomarca{
+    display: flex;
+    align-items: center;
+}
+.spa{
+    cursor: pointer;
+    display: inline;
+    margin-top: 3px;
+}
+.car{
+    width: 22px;
+    cursor: pointer;
+}
 body{
     background-color: #FDD447;
     font-family: norms;
