--- a/estilo/style.css
+++ b/estilo/style.css
@@ -344,6 +344,26 @@ label{
 {
     background-color: #3a3600;
 }
+/*tamanho da scrollbar*/
+::-webkit-scrollbar
+{
+    width: 10px;
+}
+/* Estilizando a thumb*/
+::-webkit-scrollbar-thumb
+{
+    background-color: rgb(255, 255, 255); /*Cor da thumb*/
+    border-radius: 10px; /* Raio da borda do thumb */
+}
+/* Estilizando a track (a "trilha" onde o thumb se move) */
+::-webkit-scrollbar-track {
+  background-color: #000000; /* Cor da track */
+  border-radius: 10px; /* Raio da borda da track */
+}
+/* Estilizando a track quando passar o mouse por cima */
+::-webkit-scrollbar-track:hover {
+  background-color: #686868; /* Cor da track ao passar o mouse */
+}
 .valor{
     color: #FF3131;
     font-weight: 700;
