--- a/estilo/style.css
+++ b/estilo/style.css
@@ -345,6 +345,7 @@ label{
 {
     background-color: #3a3600;
 }
+/*Estilização da scrollbar*/
 /*tamanho da scrollbar*/
 ::-webkit-scrollbar
 {
@@ -363,7 +364,7 @@ label{
 }
 /* Estilizando a track quando passar o mouse por cima */
 ::-webkit-scrollbar-track:hover {
-  background-color: #686868; /* Cor da track ao passar o mouse */
+  background-color: #444444; /* Cor da track ao passar o mouse */
 }
 .valor{
     color: #FF3131;
