--- a/estilo/style.css
+++ b/estilo/style.css
@@ -159,12 +159,17 @@ header{
     font-weight: 600;
     cursor: pointer;
     font-size: 1rem;
+    opacity: 0.8;
 }
 .btn-estilo2{
     margin-left: 12px;
     opacity: 0.6;
 }
 .btn-estilo2:hover{
+    opacity: 1;
+    transition: 1s;
+}
+.btn-estilo1:hover{
     opacity: 1;
     transition: 1s;
 }
@@ -213,6 +218,11 @@ span{
     font-weight: 600;
     cursor: pointer;
     font-size: 1.30rem;
+    opacity: 0.8;
+}
+.btn3:hover{
+    opacity: 1;
+    transition: 1s;
 }
 a{
     color: black;
@@ -258,6 +268,12 @@ h3{
     font-weight: 600;
     cursor: pointer;
     font-size: 1.30rem;
+    opacity: 0.8;
+}
+.btn4:hover
+{
+    opacity: 1;
+    transition: 1s;
 }
 .section-quaternario{
     padding: 3vw;
