--- a/estilo/style.css
+++ b/estilo/style.css
@@ -134,6 +134,7 @@ header{
     cursor: pointer;
     display: inline;
     margin-top: 3px;
+    margin-right: 10px;
 }
 .car{
     width: 22px;
@@ -351,7 +352,7 @@ label{
     right: 20px;
     z-index: 9999; 
     padding: 10px; 
-    background-color: #706901; 
+    background-color: #f18a00; 
     color: #fff; 
     border: none; 
     border-radius: 4px; 
@@ -359,7 +360,7 @@ label{
 }
 #bt-top:hover
 {
-    background-color: #3a3600;
+    background-color: #d87b00;
 }
 /*Estilização da scrollbar*/
 /*tamanho da scrollbar*/
